Update back button link from home.html to index.html

--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header class="courses-header">
         <div class="header-content">
-            <a href="home.html" class="back-button">← Retour</a>
+            <a href="index.html" class="back-button">← Retour</a>
             <h1 class="main-title">COURS MERISE & SQL</h1>
             <p class="subtitle">Maîtrisez les bases de données</p>
         </div>
